@@ -34,6 +34,10 @@ Version 2.1.3 - The "???" version
 ----------
 2006-??-??
 
+	GonoszTopi:
+		* Fixed windows compilation, that was still broken.
+		* Fixed locale bug. See http://forum.amule.org/thread.php?threadid=10178&sid=
+
 --------------------------------------------------------------------------------
 
 Version 2.1.2 - The "We're on fire!" version
